mpi.d


///* MPI_CONVERSION_FN_NULL is a sentinel value, but it has to be large
   //enough to be the same size as a valid function pointer.  It
   //therefore shares many characteristics between Fortran constants and
   //Fortran sentinel functions.  For example, it shares the problem of
   //having Fortran compilers have all-caps versions of the symbols that
   //must be able to be present, and therefore has to be in this
   //conditional block in mpi.h. */
    //MPI_CONVERSION_FN_NULL  = (cast(MPI_Datarep_conversion_function*) 0)
//}//if
}//enum

int OMPI_C_MPI_TYPE_NULL_DELETE_FN( MPI_Datatype datatype,
                                    int type_keyval,
                                    void* attribute_val_out,
                                    void* extra_state );
int OMPI_C_MPI_TYPE_NULL_COPY_FN( MPI_Datatype datatype,
                                  int type_keyval,
                                  void* extra_state,
                                  void* attribute_val_in,
                                  void* attribute_val_out,
                                  int* flag );
int OMPI_C_MPI_TYPE_DUP_FN( MPI_Datatype datatype,
                            int type_keyval,
                            void* extra_state,
                            void* attribute_val_in,
                            void* attribute_val_out,
                            int* flag );
int OMPI_C_MPI_COMM_NULL_DELETE_FN( MPI_Comm comm,
                                    int comm_keyval,
                                    void* attribute_val_out,
                                    void* extra_state );
int OMPI_C_MPI_COMM_NULL_COPY_FN( MPI_Comm comm,
                                  int comm_keyval,
                                  void* extra_state,
                                  void* attribute_val_in,
                                  void* attribute_val_out,
                                  int* flag );
int OMPI_C_MPI_COMM_DUP_FN( MPI_Comm comm, int comm_keyval,
                            void* extra_state,
                            void* attribute_val_in,
                            void* attribute_val_out,
                            int* flag );
int OMPI_C_MPI_NULL_DELETE_FN( MPI_Comm comm, int comm_keyval,
                               void* attribute_val_out,
                               void* extra_state );
int OMPI_C_MPI_NULL_COPY_FN( MPI_Comm comm, int comm_keyval,
                             void* extra_state,
                             void* attribute_val_in,
                             void* attribute_val_out,
                             int* flag );
int OMPI_C_MPI_DUP_FN( MPI_Comm comm, int comm_keyval,
                       void* extra_state,
                       void* attribute_val_in,
                       void* attribute_val_out,
                       int* flag );
int OMPI_C_MPI_WIN_NULL_DELETE_FN( MPI_Win window,
                                   int win_keyval,
                                   void* attribute_val_out,
                                   void* extra_state );
int OMPI_C_MPI_WIN_NULL_COPY_FN( MPI_Win window, int win_keyval,
                                 void* extra_state,
                                 void* attribute_val_in,
                                 void* attribute_val_out,
                                 int* flag );
int OMPI_C_MPI_WIN_DUP_FN( MPI_Win window, int win_keyval,
                           void* extra_state,
                           void* attribute_val_in,
                           void* attribute_val_out,
                           int* flag );



/*
 * MPI predefined handles
 */
static if(OMPI_HAVE_LONG_LONG)
{
    immutable MPI_LONG_LONG_INT   = cast(immutable(void*)) &(ompi_mpi_long_long_int);
    immutable MPI_LONG_LONG       = cast(immutable(void*)) &(ompi_mpi_long_long_int);
    immutable MPI_UNSIGNED_LONG_LONG  = cast(immutable(void*)) &(ompi_mpi_unsigned_long_long);
}  /* OMPI_HAVE_LONG_LONG */
static if(OMPI_HAVE_FORTRAN_LOGICAL1)
{
    immutable MPI_LOGICAL1        = cast(immutable(void*)) &(ompi_mpi_logical1);
}
static if(OMPI_HAVE_FORTRAN_LOGICAL2)
{
    immutable MPI_LOGICAL2        = cast(immutable(void*)) &(ompi_mpi_logical2);
}
static if(OMPI_HAVE_FORTRAN_LOGICAL4)
{
    immutable MPI_LOGICAL4        = cast(immutable(void*)) &(ompi_mpi_logical4);
}
static if(OMPI_HAVE_FORTRAN_LOGICAL8)
{
    immutable MPI_LOGICAL8        = cast(immutable(void*)) &(ompi_mpi_logical8);
}
static if(OMPI_HAVE_FORTRAN_INTEGER1)
{
    immutable MPI_INTEGER1        = cast(immutable(void*)) &(ompi_mpi_integer1);
}
static if(OMPI_HAVE_FORTRAN_INTEGER2)
{
    immutable MPI_INTEGER2        = cast(immutable(void*)) &(ompi_mpi_integer2);
}
static if(OMPI_HAVE_FORTRAN_INTEGER4)
{
    immutable MPI_INTEGER4        = cast(immutable(void*)) &(ompi_mpi_integer4);
}
static if(OMPI_HAVE_FORTRAN_INTEGER8)
{
    immutable MPI_INTEGER8        = cast(immutable(void*)) &(ompi_mpi_integer8);
}
static if(OMPI_HAVE_FORTRAN_INTEGER16)
{
    immutable MPI_INTEGER16       = cast(immutable(void*)) &(ompi_mpi_integer16);
}
static if(OMPI_HAVE_FORTRAN_REAL4)
{
    immutable MPI_REAL4           = cast(immutable(void*)) &(ompi_mpi_real4);
}
static if(OMPI_HAVE_FORTRAN_REAL8)
{
    immutable MPI_REAL8           = cast(immutable(void*)) &(ompi_mpi_real8);
}
static if(OMPI_HAVE_FORTRAN_REAL16)
{
    immutable MPI_REAL16          = cast(immutable(void*)) &(ompi_mpi_real16);
}
static if(OMPI_HAVE_FORTRAN_REAL4)
{
    immutable MPI_COMPLEX8        = cast(immutable(void*)) &(ompi_mpi_complex8);
}
static if(OMPI_HAVE_FORTRAN_REAL8)
{
    immutable MPI_COMPLEX16       = cast(immutable(void*)) &(ompi_mpi_complex16);
}
static if(OMPI_HAVE_FORTRAN_REAL16)
{
    immutable MPI_COMPLEX32       = cast(immutable(void*)) &(ompi_mpi_complex32);
}

enum //what type? void.  these are voids..
{
    MPI_COMM_WORLD      = cast(void*) &(ompi_mpi_comm_world),
    MPI_COMM_SELF       = cast(void*) &(ompi_mpi_comm_self),

    MPI_GROUP_EMPTY     = cast(void*) &(ompi_mpi_group_empty),

    MPI_MAX             = cast(void*) &(ompi_mpi_op_max),
    MPI_MIN             = cast(void*) &(ompi_mpi_op_min),

    MPI_SUM             = cast(void*) &(ompi_mpi_op_sum),
    MPI_PROD            = cast(void*) &(ompi_mpi_op_prod),
    MPI_LAND            = cast(void*) &(ompi_mpi_op_land),
    MPI_BAND            = cast(void*) &(ompi_mpi_op_band),
    MPI_LOR             = cast(void*) &(ompi_mpi_op_lor),
    MPI_BOR             = cast(void*) &(ompi_mpi_op_bor),
    MPI_LXOR            = cast(void*) &(ompi_mpi_op_lxor),
    MPI_BXOR            = cast(void*) &(ompi_mpi_op_bxor),
    MPI_MAXLOC          = cast(void*) &(ompi_mpi_op_maxloc),
    MPI_MINLOC          = cast(void*) &(ompi_mpi_op_minloc),
    MPI_REPLACE         = cast(void*) &(ompi_mpi_op_replace),

/* C datatypes */
    MPI_DATATYPE_NULL   = cast(void*) &(ompi_mpi_datatype_null),
    MPI_BYTE            = cast(void*) &(ompi_mpi_byte),
    MPI_PACKED          = cast(void*) &(ompi_mpi_packed),
    MPI_CHAR            = cast(void*) &(ompi_mpi_char),
    MPI_SHORT           = cast(void*) &(ompi_mpi_short),
    MPI_INT             = cast(void*) &(ompi_mpi_int),
    MPI_LONG            = cast(void*) &(ompi_mpi_long),
    MPI_FLOAT           = cast(void*) &(ompi_mpi_float),
    MPI_DOUBLE          = cast(void*) &(ompi_mpi_double),
    MPI_LONG_DOUBLE     = cast(void*) &(ompi_mpi_long_double),
    MPI_UNSIGNED_CHAR   = cast(void*) &(ompi_mpi_unsigned_char),
    MPI_SIGNED_CHAR     = cast(void*) &(ompi_mpi_signed_char),
    MPI_UNSIGNED_SHORT  = cast(void*) &(ompi_mpi_unsigned_short),
    MPI_UNSIGNED_LONG   = cast(void*) &(ompi_mpi_unsigned_long),
    MPI_UNSIGNED        = cast(void*) &(ompi_mpi_unsigned),
    MPI_FLOAT_INT       = cast(void*) &(ompi_mpi_float_int),
    MPI_DOUBLE_INT      = cast(void*) &(ompi_mpi_double_int),
    MPI_LONG_DOUBLE_INT = cast(void*) &(ompi_mpi_longdbl_int),
    MPI_LONG_INT        = cast(void*) &(ompi_mpi_long_int),
    MPI_SHORT_INT       = cast(void*) &(ompi_mpi_short_int),
    MPI_2INT            = cast(void*) &(ompi_mpi_2int),
    MPI_UB              = cast(void*) &(ompi_mpi_ub),
    MPI_LB              = cast(void*) &(ompi_mpi_lb),
    MPI_WCHAR           = cast(void*) &(ompi_mpi_wchar),

    MPI_2COMPLEX        = cast(void*) &(ompi_mpi_2cplex),
    MPI_2DOUBLE_COMPLEX = cast(void*) &(ompi_mpi_2dblcplex),

/* Fortran datatype bindings */
    MPI_CHARACTER       = cast(void*) &(ompi_mpi_character),
    MPI_LOGICAL         = cast(void*) &(ompi_mpi_logic),



    MPI_INTEGER         = cast(void*) &(ompi_mpi_integer),


    MPI_REAL            = cast(void*) &(ompi_mpi_real),

    MPI_DOUBLE_PRECISION    = cast(void*) &(ompi_mpi_dblprec),
    MPI_COMPLEX         = cast(void*) &(ompi_mpi_cplex),

    MPI_DOUBLE_COMPLEX  = cast(void*) &(ompi_mpi_dblcplex),
    MPI_2REAL           = cast(void*) &(ompi_mpi_2real),
    MPI_2DOUBLE_PRECISION   = cast(void*) &(ompi_mpi_2dblprec),
    MPI_2INTEGER        = cast(void*) &(ompi_mpi_2integer),

    MPI_ERRORS_ARE_FATAL    = cast(void*) &(ompi_mpi_errors_are_fatal),
    MPI_ERRORS_RETURN   = cast(void*) &(ompi_mpi_errors_return),

/* Typeclass definition for MPI_Type_match_size */
    MPI_TYPECLASS_INTEGER   = 1,
    MPI_TYPECLASS_REAL      = 2,
    MPI_TYPECLASS_COMPLEX   = 3
}//enum

/*
 * MPI API
 */
